--- a/editor-style.css
+++ b/editor-style.css
@@ -4,6 +4,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800);
 body { 
   font-family: 'Libre Baskerville', serif; 
+  color:#000;
   font-size:14px;
   line-height:1.5em;
   max-width: 600px;
