--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Icons from https://github.com/iconic/open-iconic opensource.org/licenses/MIT */
 body { 
   font-family: 'Libre Baskerville', serif; 
   font-family:'Open Sans', sans;
