--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,324 +1,260 @@
-@font-face {
-  font-family: 'Noto Sans';
-  font-weight: 400;
-  font-style: normal;
-  src: url('../fonts/Noto-Sans-regular/Noto-Sans-regular.eot');
-  src: url('../fonts/Noto-Sans-regular/Noto-Sans-regular.eot?#iefix') format('embedded-opentype'),
-       local('Noto Sans'),
-       local('Noto-Sans-regular'),
-       url('../fonts/Noto-Sans-regular/Noto-Sans-regular.woff2') format('woff2'),
-       url('../fonts/Noto-Sans-regular/Noto-Sans-regular.woff') format('woff'),
-       url('../fonts/Noto-Sans-regular/Noto-Sans-regular.ttf') format('truetype'),
-       url('../fonts/Noto-Sans-regular/Noto-Sans-regular.svg#NotoSans') format('svg');
+body { 
+  font-family: 'Libre Baskerville', serif; 
+  font-family:'Open Sans', sans;
+  font-size:16px;
+  line-height:1.5em;
+  color:#000;
+  margin:0;
+  background:#efefef;
+  background:#eee;
+}
+@media (max-width:700px) {
+  body { font-size:14px; }
+}
+a, a .icon { 
+  color:#136fd2; 
+  color:#0a3666;
+  fill:#0a3666;
+  text-decoration:none;
+}
+a:hover,a:hover .icon {
+  color:#C02942;
+  color:#136fd2;
+  fill:#136fd2;
+}
+a:hover {
+  color:#136fd2;
+}
+a:active {
+  color:#bf7883;
 }
 
-@font-face {
-  font-family: 'Noto Sans';
-  font-weight: 700;
-  font-style: normal;
-  src: url('../fonts/Noto-Sans-700/Noto-Sans-700.eot');
-  src: url('../fonts/Noto-Sans-700/Noto-Sans-700.eot?#iefix') format('embedded-opentype'),
-       local('Noto Sans Bold'),
-       local('Noto-Sans-700'),
-       url('../fonts/Noto-Sans-700/Noto-Sans-700.woff2') format('woff2'),
-       url('../fonts/Noto-Sans-700/Noto-Sans-700.woff') format('woff'),
-       url('../fonts/Noto-Sans-700/Noto-Sans-700.ttf') format('truetype'),
-       url('../fonts/Noto-Sans-700/Noto-Sans-700.svg#NotoSans') format('svg');
+.top-menu {
+  margin: 0;
+  padding: 0;
+  float: none;
+  text-align: center;
+  text-transform:uppercase;
+  font-size:1em; 
+  line-height:1.2rem;
+  letter-spacing:.25em;
+  font-family:'Open Sans Condensed',sans-serif;
+  font-weight:700;
+  background:#222;
+}
+.top-menu li a { 
+  text-decoration:none; 
+  color:#eee; 
+}
+.top-menu a:hover {
+  color:#7ba4d1;
+  text-shadow:0 1px 0 #000;
+}
+.top-menu a:active,
+.top-menu .current a {
+  color:#bf7883;
 }
 
-@font-face {
-  font-family: 'Noto Sans';
-  font-weight: 400;
-  font-style: italic;
-  src: url('../fonts/Noto-Sans-italic/Noto-Sans-italic.eot');
-  src: url('../fonts/Noto-Sans-italic/Noto-Sans-italic.eot?#iefix') format('embedded-opentype'),
-       local('Noto Sans Italic'),
-       local('Noto-Sans-italic'),
-       url('../fonts/Noto-Sans-italic/Noto-Sans-italic.woff2') format('woff2'),
-       url('../fonts/Noto-Sans-italic/Noto-Sans-italic.woff') format('woff'),
-       url('../fonts/Noto-Sans-italic/Noto-Sans-italic.ttf') format('truetype'),
-       url('../fonts/Noto-Sans-italic/Noto-Sans-italic.svg#NotoSans') format('svg');
+.top-menu li {
+  display: inline;
+  list-style-type: none;
+  border-right:solid 1px #ccc;
+  padding-right: 1em;
+  padding-left:.8em
+}
+.top-menu li:last-child {
+  border-right:none;
+  padding-right:0;
 }
 
-@font-face {
-  font-family: 'Noto Sans';
-  font-weight: 700;
-  font-style: italic;
-  src: url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot');
-  src: url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot?#iefix') format('embedded-opentype'),
-       local('Noto Sans Bold Italic'),
-       local('Noto-Sans-700italic'),
-       url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff2') format('woff2'),
-       url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff') format('woff'),
-       url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf') format('truetype'),
-       url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans') format('svg');
+.site-title {
+  display:block;
+  width:347px;
+  height:57px;
+  margin:3rem auto;
+  background:url(http://stefanmatei.com/vileworks/wp-content/uploads/2014/07/vileworks-logo.png) top center no-repeat;
+  width:400px;
+  text-indent:200%;
+  overflow:hidden;
+  white-space:nowrap;
 }
 
-body {
-  background-color: #fff;
-  padding:50px;
-  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
-  font-weight:400;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  color:#222;
-  margin:0 0 20px;
-}
-
-p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
-}
-
-h1, h2, h3 {
-  line-height:1.1;
+#content {
+  /*text-align: center;*/
+  max-width: 600px;
+  margin: 0em auto;
+  display: block;
+  background: #fff;
+  background:#fcfcfc; color:#000;
+  padding: 2em;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 h1 {
-  font-size:28px;
+  text-align:center;
+  font-size:2em; 
+  line-height:1.5em;
+  line-height: 1.2em;
+  letter-spacing:0.15em;
+  font-family:'Arapey', serif;
+  text-transform:uppercase;
+  font-weight:normal;
+  margin-top:0;
+  position:relative;/*
+  border: solid 1px;
+  border-width: 1px 0;
+  padding: .5em 0;*/
 }
 
 h2 {
-  color:#393939;
+  font-size:1.2em;
+  line-height:1.2em;
+  font-family:'Open Sans',sans-serif;   
 }
+h1, h2, h3, h4, h5, h6 {
 
-h3, h4, h5, h6 {
-  color:#494949;
 }
-
-a {
-  color:#39c;
-  text-decoration:none;
-}
-
-a:hover {
-  color:#069;
-}
-
-a small {
-  font-size:11px;
-  color:#777;
-  margin-top:-0.3em;
-  display:block;
-}
-
-a:hover small {
-  color:#777;
-}
-
-.wrapper {
-  width:860px;
-  margin:0 auto;
-}
-
-blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
-}
-
-code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
-  color:#333;
-  font-size:12px;
-}
-
-pre {
-  padding:8px 15px;
-  background: #f8f8f8;
-  border-radius:5px;
-  border:1px solid #e5e5e5;
-  overflow-x: auto;
-}
-
-table {
-  width:100%;
-  border-collapse:collapse;
-}
-
-th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
-}
-
-dt {
-  color:#444;
-  font-weight:700;
-}
-
-th {
-  color:#444;
-}
-
-img {
-  max-width:100%;
-}
-
-header {
-  width:270px;
-  float:left;
-  position:fixed;
-  -webkit-font-smoothing:subpixel-antialiased;
-}
-
-header ul {
-  list-style:none;
-  height:40px;
-  padding:0;
-  background: #f4f4f4;
-  border-radius:5px;
-  border:1px solid #e0e0e0;
-  width:270px;
-}
-
-header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #e0e0e0;
-  height:40px;
-}
-
-header li:first-child a {
-  border-radius:5px 0 0 5px;
-}
-
-header li:last-child a {
-  border-radius:0 5px 5px 0;
-}
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:34px;
-}
-
-header ul a:hover {
-  color:#999;
-}
-
-header ul a:active {
-  background-color:#f0f0f0;
-}
-
-strong {
-  color:#222;
-  font-weight:700;
-}
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
-}
-
-header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
-}
-
-section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
-}
-
-small {
-  font-size:11px;
-}
-
 hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
+  margin: 2em 0;
+  width: 100%;
 }
 
-footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-  -webkit-font-smoothing:subpixel-antialiased;
+#input-html {
+  width:100%;
+  min-height:20em;
 }
-
-@media print, screen and (max-width: 960px) {
-
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-
-  header {
-    padding-right:320px;
-  }
-
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-
-  header a small {
-    display:inline;
-  }
-
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
+#mceu_13 {
+  width:calc(100% + 8em); 
+  margin:3em -4em;
+  margin-bottom:3em;
+  box-shadow:0 0px 2px 5px rgba(200,200,200,.4);
+  display:block;
+}
+@media (max-width:800px) {
+  #mceu_13 { 
+    width:100%; 
+    margin:1em 0;
   }
 }
-
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-
-  header {
-    padding:0;
-  }
-
-  header ul, header p.view {
-    position:static;
-  }
-
-  pre, code {
-    word-wrap:normal;
-  }
+i.mce-i-resize {
+    color: #333;
+    fill:red;
 }
 
-@media print, screen and (max-width: 480px) {
-  body {
-    padding:15px;
-  }
-
-  header ul {
-    width:99%;
-  }
-
-  header li, header ul li + li + li {
-    width:33%;
-  }
+#signature {
+  width:auto;
+  border:dashed 1px #53777A;
+  margin:0;
+  margin-bottom:2em;
+  text-align:center;
+  border-radius:3px;
+  background:#fdfdfd;
+  box-shadow:0 0 5px 1px #ddd inset;
 }
 
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
+button {
+    cursor:pointer;
+    margin: 0 .5em;
+    /*font-size: 1.2em;
+    line-height: 1.5em;
+     letter-spacing: .05em; 
+    font-family: 'Open Sans Condensed',sans-serif;*/
+    font-weight: 400;
+    /*color: #0a3666;*/
+}
+button:not([disabled]):hover, button:not([disabled]):focus {
+    color: #333; 
+    background-color: #e3e3e3;
+    background-image: -moz-linear-gradient(top, #f2f2f2, #ccc);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f2f2f2), to(#ccc));
+    background-image: -webkit-linear-gradient(top, #f2f2f2, #ccc);
+    background-image: -o-linear-gradient(top, #f2f2f2, #ccc);
+    background-image: linear-gradient(to bottom, #f2f2f2, #ccc);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff2f2f2', endColorstr='#ffcccccc', GradientType=0);
+    zoom: 1;
+}
+button:not([disabled]):hover .icon {
+  fill:#C02942;
+}
+button {
+    border: 1px solid #b1b1b1;
+    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25) rgba(0,0,0,0.25);
+    position: relative;
+    text-shadow: 0 1px 1px rgba(255,255,255,0.75);
+    display: inline-block;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    background-color: #f0f0f0;
+    background-image: -moz-linear-gradient(top, #fff, #d9d9d9);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#d9d9d9));
+    background-image: -webkit-linear-gradient(top, #fff, #d9d9d9);
+    background-image: -o-linear-gradient(top, #fff, #d9d9d9);
+    background-image: linear-gradient(to bottom, #fff, #d9d9d9);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffd9d9d9', GradientType=0);
+    zoom: 1;
+}
+.icon {
+  fill:#222;
+  width:12px; height:12px;
+  margin:.075em .1em;
+  margin-right:.2em;
+}
+.large-icon {
+  fill:#ddd; 
+  margin:0;
+  margin-left:2em;
+  margin-bottom:1em;
+  float:right;
+  width:10%;
+  height:10%;
+}
+.large-icon.right {
+}
+
+.resources {
+  list-style:none;
+  padding:0;
+  text-align:right;
+  text-align: center;
+  font-size:1em;
+  line-height:1.5em;
+  font-family:'Open Sans',sans-serif;  
+  font-weight: 300;
+  line-height: 1.5em;
+  letter-spacing: .05em;
+}
+.resources li {
+  text-align:right;
+}
+.resources a {
+  /*color:#000;*/
+}
+.resources a:hover, .resources a:hover .icon {
+  /*color:#C02942;*/
+  /*fill:#C02942;*/
+}
+@media (min-width:800px) {
+  .two-columns {
+      margin-left: 1.2em;
+      -moz-column-count: 2;
+      -webkit-column-count: 2;
+      column-count: 2;
+      -moz-column-gap: 1.5em;
+      -webkit-column-gap: 1.5em;
+      column-gap: 1.5em;
   }
+}
+.footer {
+  text-align:center;
+  /*font-family:'Arapey',sans-serif;*/
+  font-size:1em;
 }
