--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,6 +12,9 @@ body {
   background:#efefef;
   background:#eee;
 }
+img {
+  max-width:100%;
+}
 @media (max-width:700px) {
   body { font-size:14px; }
 }
