--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -185,10 +185,9 @@ header {
 }
 
 a:hover img  {
-  -webkit-filter: contrast(1.075);
-  -moz-filter: contrast(1.075);
-  filter: contrast(1.075);
-  opacity:.915;
+  -webkit-filter: brightness(1.075);
+  -moz-filter: brightness(1.075);
+  filter: brightness(1.075);
 }
 
 #stumble {
