--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -23,6 +23,9 @@ a, a .icon {
   color:#0a3666;
   fill:#0a3666;
   text-decoration:none;
+  -moz-transition: all 300ms;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
 }
 a:hover,a:hover .icon {
   color:#C02942;
