--- a/generator/styles/main.css
+++ b/generator/styles/main.css
@@ -6,6 +6,8 @@
 @layer modal, preview-modal;
 @layer contract-typography;
 
+@layer core;
+
 @import url(abstracts.css);
 
 @import url(reset.css) layer(reset);
@@ -24,3 +26,194 @@
 /* @import url(/../data/more-data/css/main.css); */
 @import url(../data/style.min.css);
 
+@layer core {
+
+    .repeater-form output > * {
+        margin-block-start: 1rem;
+        margin-inline: auto;
+    }
+
+    .repeater-item {
+        display: flex;
+        align-items: flex-end;
+        display: grid;
+        grid-template-columns: 1fr 1fr 4rem;
+        position: relative;
+    }
+
+    .repeater-item-name,
+    .repeater-item-value {
+        max-width: min(100%, 8rem);
+    }
+
+    .close-button {
+        --secondary: hsl(3,55%,30%,1);
+        --secondary-hover: hsl(3,75%,40%,1);
+        border-radius: 50%;
+        width: 32px;
+        height: 32px;
+        max-width: 32px;
+        margin: 1rem 0 0 0;
+        padding: 0;
+        margin: 0;
+        position: relative;
+        position: absolute;
+        /* letter X made out of 2 pseudo-elements */
+    }
+    @media (width < 400px) {
+        .close-button {
+            scale: 0.75;
+            top: 0.3rem !important;
+            right: 0.3rem;
+            bottom: unset;
+            left: unset;
+        }
+    }
+    @media (width >= 400px) {
+        .close-button {
+            right: 0;
+            top: -8px;
+        }
+    }
+    .close-button:focus-visible {
+        outline-style: solid;
+        outline-color: currentColor;
+        outline-offset: -1px;
+        outline-width: 1.5px;
+    }
+    .close-button:active {
+        background-color: #000;
+        transition: none;
+    }
+    .close-button::before {
+        height: 1.5px;
+        width: 50%;
+    }
+    .close-button::after {
+        height: 50%;
+        width: 1.5px;
+    }
+    .close-button::before, .close-button::after {
+        background-color: currentColor;
+        content: "";
+        display: block;
+        left: 50%;
+        position: absolute;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%) rotate(45deg);
+        transform-origin: center center;
+    }
+    .close-button span {
+        display: none;
+    }
+
+    article:first-child .close-button {
+        top: unset;
+    }
+
+        .repeater-item > footer {
+        grid-column: span 3;
+        }
+
+        .repeater-info {
+        width: 100%;
+        display: block;
+        }
+        .repeater-info small {
+        margin: 0;
+        color: #888;
+        display: block;
+        font-style: italic;
+        }
+
+        .repeater-form > footer {
+        display: flex;
+        gap: 1rem;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        justify-content: center;
+        }
+
+        @media (width < 400px) {
+        .repeater-form output {
+            margin-inline: auto;
+        }
+
+        .repeater-item {
+            background: #dddddd;
+            padding: 1rem;
+            padding-block-start: 0.75rem;
+            padding-block-end: 1.1rem;
+            display: grid;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            margin-inline: auto;
+            gap: 1rem;
+            max-width: min-content;
+        }
+        .repeater-form > footer {
+            width: 100%;
+            grid-column: span 3;
+        }
+        }
+        @media (width >= 400px) {
+        .repeater-item:not(:first-child) label span {
+            clip: rect(0, 0, 0, 0);
+            border: 0;
+            height: 1px;
+            margin: -1px;
+            overflow: hidden;
+            padding: 0;
+            position: absolute;
+            white-space: nowrap;
+            width: 1px;
+        }
+
+        .repeater-item:first-child label span {
+            border-bottom: solid 1px #88888888;
+            padding-bottom: 0.5rem;
+            margin-bottom: 0.5rem;
+            width: calc(100% - 1rem);
+        }
+
+        .repeater-info small {
+            padding-block: 1rem 0;
+        }
+
+        .repeater-form > footer {
+            margin-block-start: 0rem;
+            width: 100%;
+            justify-content: flex-start;
+        }
+        }
+
+
+        /************************************************/
+        /* Logic to hide/show info/remove/add-item UI's */
+        /************************************************/
+        article:not(:last-child) .repeater-info,
+        article:not(:has(input:placeholder-shown)):last-child .repeater-info {
+        display: none !important;
+        }
+
+        article:last-child:first-child:has(input:placeholder-shown) .close-button {
+        display: none;
+        }
+
+        article:last-child:has(input:placeholder-shown) .close-button {
+        top: -8px;
+        transition: top 0.3s ease-in-out;
+        }
+
+        .add-btn {
+        transition: all 0.3s ease-in-out, opacity 0.6s ease-out;
+        }
+
+        form:has(article:last-child input:placeholder-shown) .add-btn {
+        transition: none;
+        opacity: 0;
+        overflow: hidden;
+        pointer-events: none;
+        }
+}
