js/localStorage + add button size and other  style integrations

--- a/generator/data/more-data/css/forms.css
+++ b/generator/data/more-data/css/forms.css
@@ -60,3 +60,14 @@ label:has(svg) {
       color: var(--clr-blue-700);
     }
 }
+
+
+
+/**/
+
+.panel > small {
+    display: block;
+    opacity: 75%;
+    text-wrap: balance;
+    line-height: 1.75;
+}
