--- a/generator/data/more-data/css/panels.css
+++ b/generator/data/more-data/css/panels.css
@@ -12,6 +12,8 @@ details {
 
     &[open] {
         max-height: 90vh;
+        max-height: 300vh;
+        /* overflow: auto; */
         summary { padding-block-end: .5em; }
     }
 
@@ -49,7 +51,9 @@ details {
         font-size: 16px;
         line-height: 26px;
         cursor: pointer;
-        transition: outline .4s cubic-bezier(0.22, 1, 0.36, 1);
+        transition: 
+            outline .4s cubic-bezier(0.22, 1, 0.36, 1), 
+            padding .2s ease-in;
 
         color: var(--clr-500);
         font-family: inherit;
@@ -94,7 +98,8 @@ details {
     }
     
     /* contents */
-    & > *:nth-child(2):last-child {
+    /* & > *:nth-child(2):last-child { */
+    & > .panel {
         background: hsl(var(--clr-primary-hsl)/.1);
         border-radius: 8px;
         border: solid 1.5px hsl(var(--clr-primary-hsl)/.075);
