Update styles and content

--- a/generator/data/more-data/css/forms.css
+++ b/generator/data/more-data/css/forms.css
@@ -65,9 +65,10 @@ label:has(svg) {
 
 /**/
 
-.panel > small {
+/* .panel > small {
     display: block;
     opacity: 75%;
     text-wrap: balance;
     line-height: 1.75;
-}
+    font-weight: 600;
+} */
