hover state for "remove item" + .close-button conflict fixes w/ preview-modal

--- a/generator/styles/preview-modal.css
+++ b/generator/styles/preview-modal.css
@@ -16,6 +16,7 @@
     height: 0;
     /* padding-inline-end: 1rem; */
     bottom: 4rem;
+    bottom: 3rem;
     right: 1rem;
     position: absolute;
 }
