--- a/generator/styles/repeater.css
+++ b/generator/styles/repeater.css
@@ -301,9 +301,9 @@ body .repeater-form .close-button {
 
 
 article:has(.close-button:is(:hover,:focus)) .repeater-item-field input {
-  --primary: red;
   background-color: var(--danger);
-  opacity: .65;
+  opacity: .55;
   /* filter: contrast(3); */
-  filter: blur(1px) contrast(3);
+  /* filter: blur(1px) contrast(2); */
+  filter: blur(1px);
 }
