Update margin-inline-start in panels.css for larger screens

--- a/generator/data/more-data/css/panels.css
+++ b/generator/data/more-data/css/panels.css
@@ -12,9 +12,12 @@ details {
 
     margin-inline-start: -0.75rem;
     margin-inline-start: -0.81rem;
-    & > *:not(summary) {
-        margin-inline-start: 0.75rem;
-        margin-inline-start: 0.81rem;
+    
+    @media (width < 535px) {
+        & > *:not(summary) {
+            margin-inline-start: 0.75rem;
+            /* margin-inline-start: 0.81rem; */
+        }
     }
     & details {
         margin-inline-start: 0;
