--- a/generator/styles/quill-html-button.css
+++ b/generator/styles/quill-html-button.css
@@ -57,6 +57,8 @@
     box-shadow: inset 0 0 5px 1px hsl(200deg 40% 20% / 15%);
 
     min-height: 75vh;
+    min-height: calc(100svh - 12rem);
+    overscroll-behavior: contain;
 }
 
 
